# simhash

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  ChangeLog.md  README.md  README_EN.md
.github/workflows/: cmake.yml  stale-issues.yml
benchmark/: CMakeLists.txt  benchmarking.cpp
benchmark/lib/: Simhasher_benchmark.h  utils.h  vals.h
example/: CMakeLists.txt  demo.cpp
include/simhash/: Simhasher.hpp  jenkins.h
python/: CMakeLists.txt  pymodule.cpp
src/: CMakeLists.txt  Simhash.hpp  Simhasher.hpp  main.cpp
src/hashes/: jenkins.h
test/: CMakeLists.txt  load_test.cpp
test/testdata/: news_content  news_content.3  news_content.4
test/unittest/: CMakeLists.txt  TJenkins.cpp  TSimhash.cpp
